fix: correct font for brief info block, correct styles for html to cancel elements' offset by scrollbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,9 +12,11 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-y: scroll; /* убрать смещение из-за полосы прокрутки*/
 }
 
 .container {
+    width: 100%;
     position: relative;
     display: flex; 
     flex-direction: column; /*выстраиваем элементы сверху вниз*/
